--- a/challenge-one/index.html
+++ b/challenge-one/index.html
@@ -18,16 +18,23 @@
       <h1>Challenge One:Your Age in days</h1>
       <div class="flex-box-container-1">
         <div>
-          <button class="btn btn-primary" onclick="clickCheck()">Click-me</button>
+          <button class="btn btn-primary" onclick="clickCheck()">
+            Click-me
+          </button>
         </div>
         <div>
           <button class="btn btn-danger" onclick="reset()">reset</button>
         </div>
-      </div>    
+      </div>
+      <div class="flex-box-container-1">
+        <div id="flex-box-result"></div>
+      </div>
     </div>
-    <div class="flex-box-container-1">
-        <div id="flex-box-result">
-        </div>
+    <div class="container-2">
+      <h1>Challenge-Two:Cat generator</h1>
+      <button class="btn btn-success" onclick="catGenerator()">cat-generator</button>
+      <div class="flex-box-container-2">
+      </div>
     </div>
     <script src="/challenge-one/static/JS/script.js"></script>
   </body>
